# SnapDocLib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  candidate_discoverer.cpp  cmake_install.cmake  filters.cpp  helpers.cpp  image.h  lsd.cpp  snap_doc_lib.cpp
headers/: candidate_discoverer.h  cd_params.h  filters.h  helpers.h  lsd.h  snap_doc_lib.h
sources/: candidate_discoverer.cpp  filters.cpp  helpers.cpp  lsd.cpp  snap_doc_lib.cpp
visualization/answers/: p0.txt  p1.txt  p10.txt  p11.txt  p12.txt  p13.txt  p14.txt  p15.txt  p16.txt  p17.txt  p18.txt  p19.txt  p2.txt  p20.txt  p21.txt  p22.txt  p23.txt  p24.txt  p25.txt  p26.txt  p27.txt  p28.txt  p29.txt  p3.txt  p30.txt  p31.txt  p32.txt  p33.txt  p34.txt  p35.txt  p36.txt  p37.txt  p38.txt  p39.txt  p4.txt  p40.txt  p5.txt  p6.txt  p7.txt  p8.txt  (+1 more)
